# inf-preparation-2-haydushki-fmi

./: CMakeLists.txt  README.md
src/cs/: node.hpp  task1.cpp
src/cs1/: task1.cpp  task2.cpp  task3.cpp
src/cs2/: task1.cpp  task2.cpp  task3.cpp
src/tasks/: task1.cpp
tests/cs/: task1Tests.cpp  task2Tests.cpp  task3Tests.cpp
tests/cs1/: task1Tests.cpp  task2Tests.cpp  task3Tests.cpp
tests/cs2/: task1Tests.cpp  task2Tests.cpp  task3Tests.cpp
tests/tasks/: task1Tests.cpp
